--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -15,8 +15,8 @@
         <div class="ui container">
             <div class="ui inverted secondary menu">
                 <h2 class="ui teal header item">管理后台</h2>
-                <a href="#" class="active item"><i class="mini home icon"/></i>博客</a>
-                <a href="#" class="item"><i class="mini idea icon"/></i>分类</a>
+                <a href="#" class="item"><i class="mini home icon"/></i>博客</a>
+                <a href="#" class="active item"><i class="mini idea icon"/></i>分类</a>
                 <a href="#" class="item"><i class="mini tags icon"/></i>标签</a>
                 <div class="right menu">
                     <div class="ui dropdown item">
@@ -36,8 +36,8 @@
     <div class="ui attached pointing menu">
         <div class="ui container">
             <div class="right menu">
-                <a href="#" class="teal active item">发布</a>
-                <a href="#" class="item">列表</a>
+                <a href="#" th:href="@{/admin/types/input}" class="active item">新增</a>
+                <a href="#" th:href="@{/admin/types}" class="teal item">列表</a>
             </div>
         </div>
     </div>
