--- a/src/main/resources/templates/admin/blogs.html
+++ b/src/main/resources/templates/admin/blogs.html
@@ -44,19 +44,22 @@
     <!--中间内容-->
     <div class="m-container-small m-padded-tb-big">
         <div class="ui container">
-            <form action="#" method="post" class="ui secondary segment form">
+            <div class="ui secondary segment form">
+                <input type="hidden" name="page">
                 <div class="inline fields">
                     <div class="field">
                         <input type="text" name="title" placeholder="标题">
                     </div>
                     <div class="field">
                         <div class="ui selection dropdown">
-                            <input type="hidden" name="type">
+                            <input type="hidden" name="typeId">
                             <i class="dropdown icon"></i>
                             <div class="default text">分类</div>
                             <div class="menu">
-                                <div class="item" data-value="1">错误日志</div>
+                                <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}">错误日志</div>
+                                <!--/*-->
                                 <div class="item" data-value="2">开发者手册</div>
+                                <!--*/-->
                             </div>
                         </div>
                     </div>
@@ -67,13 +70,13 @@
                         </div>
                     </div>
                     <div class="field">
-                        <button class="ui mini basic teal button"><i class="search icon"></i>搜索</button>
+                        <button type="button" id="search-btn" class="ui mini basic teal button"><i class="search icon"></i>搜索</button>
                     </div>
                 </div>
-            </form>
-
-            <table class="ui compact teal table">
-                <thead>
+            </div>
+            <div id="table-content">
+                <table th:fragment="blogList" class="ui compact teal table">
+                    <thead>
                     <tr>
                         <th></th>
                         <th>标题</th>
@@ -82,54 +85,33 @@
                         <th>更新时间</th>
                         <th>操作</th>
                     </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>刻意联系清单</td>
-                        <td>认知升级</td>
-                        <td>是</td>
-                        <td>2020-02-01 09:35</td>
+                    </thead>
+                    <tbody>
+                    <tr th:each="blog, iterStat : ${page.content}">
+                        <td th:text="${iterStat.count}">1</td>
+                        <td th:text="${blog.title}">刻意联系清单</td>
+                        <td th:text="${blog.type.name}">认知升级</td>
+                        <td th:text="${blog.recommend} ? '是' : '否'">是</td>
+                        <td th:text="${blog.updateTime}">2020-02-01 09:35</td>
                         <td>
-                            <a href="#" class="ui mini teal basic button">编辑</a>
-                            <a href="#" class="ui mini red basic button">删除</a>
+                            <a href="#" th:href="@{/admin/blogs/{id}/input(id=${blog.id})}" class="ui mini teal basic button">编辑</a>
+                            <a href="#" th:href="@{/admin/blogs/{id}/delete(id=${blog.id})}" class="ui mini red basic button">删除</a>
                         </td>
                     </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>刻意联系清单</td>
-                        <td>认知升级</td>
-                        <td>是</td>
-                        <td>2020-02-01 09:35</td>
-                        <td>
-                            <a href="#" class="ui mini teal basic button">编辑</a>
-                            <a href="#" class="ui mini red basic button">删除</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>刻意联系清单</td>
-                        <td>认知升级</td>
-                        <td>是</td>
-                        <td>2020-02-01 09:35</td>
-                        <td>
-                            <a href="#" class="ui mini teal basic button">编辑</a>
-                            <a href="#" class="ui mini red basic button">删除</a>
-                        </td>
-                    </tr>
-                </tbody>
-                <tfoot>
+                    </tbody>
+                    <tfoot>
                     <tr>
                         <th colspan="6">
-                            <div class="ui pagination menu">
-                                <a class="item">上一页</a>
-                                <a class="item">下一页</a>
+                            <div class="ui pagination menu" th:if="${page.totalPages}>1">
+                                <a onclick="page(this)" th:attr="data-page=${page.number}-1" class="item" th:unless="${page.first}">上一页</a>
+                                <a onclick="page(this)" th:attr="data-page=${page.number}+1" class="item" th:unless="${page.last}">下一页</a>
                             </div>
                             <a class="ui mini right floated teal basic button">新增</a>
                         </th>
                     </tr>
-                </tfoot>
-            </table>
+                    </tfoot>
+                </table>
+            </div>
         </div>
     </div>
     <br>
@@ -181,6 +163,24 @@
         $('.ui.dropdown').dropdown({
             on : 'hover'
         });
+
+        function page(obj) {
+            $("[name='page']").val($(obj).data("page"));
+            loaddata();
+        }
+
+        $("#search-btn").click(function () {
+            loaddata();
+        })
+        
+        function loaddata() {
+            $("#table-content").load(/*[[@{/admin/blogs/search}]]*/"/admin/blogs/search",{
+                title : $("[name='title']").val(),
+                typeId : $("[name='typeId']").val(),
+                recommend : $("[name='recommend']").prop('checked'),
+                page : $("[name='page']").val()
+            });
+        }
     </script>
 </body>
 </html>
